	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk
# (r999,r1000)
 * introduced -L/--read-from-file switch: read an image list from file (similarly to the - switch).
# (r971)
 * introduced new variable _cache_control to control the cache mechanism
 * now caching of mipmaps on by default; can be turned off with _cache_control
# (r965)
 * if _push_pushes_dirs is 2, will also push hidden files and directories; that is,
   ones whose names begin with a dot (.)
# (r963)
 * if configure'ing with --enable-c++11, the --background-recursive switch will load
   images in the background recursively, allowing viewing in the order they appear.
  (FIXME: so far synchronization during loading is missing.)
# (r961)
 * renamed configure switch --enable-cxx11 to --enable-c++11
# (r955)
  * i:_file_load_time will store the time taken to load the file and decode the image.
# (r952)
 * _use_mipmaps=2 will compute the mipmaps faster, using every fourth source pixel.
   This can be a good solution for photographs.
# (r948)
 * if configure'ing with --enable-c++11, background image loading will be available
  (FIXME: need controlling variable, need to handle failed loads)
# (r947)
 * mipmap computing (controlled by _use_mipmaps) is now faster
# (r942)
 * New option configure --with-font-magnifying-factor=FACTOR controls rendering of text
   font magnification. If FACTOR is positive this value will be hardcoded. 
# (r945)
   If FACTOR is negative, the magnification factor in the _fbfont_magnify_factor
   variable will be used, with -FACTOR as default.
   If FACTOR is 0 a default of 1 will apply.
   Option meant to be used with with very high resolutions and small fonts.
 * configure --with-font-magnifying-factor=0 will enable runtime control of the
   text magnification factor via variable _fbfont_magnify_factor .
# (r941)
 * FIXME: description files beginning with "#!fim:desc" (whatever extension) can now